[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'plangolin'
version = '0.1'
authors = [
    { name = 'Michael Aichmueller', email = 'michael.aichmueller@ml.rwth-aachen.de' },
    { name = 'Jakob Krude', email = 'jakob.krude@ml.rwth-aachen.de' }
]
license = { file = "LICENSE.md" }
description = 'Reinforcement learning for Planning using Graph Neural Networks'
readme = "README.md"
keywords = [
    "graph-neural-network",
    "gnn",
    "reinforcement-learning",
    "rl",
    "planning"
]
# error: patch_jsonargparse_python_3_12_8.<locals>._parse_known_args_patch() got an unexpected keyword argument 'intermixed'
# limits us in using python versions >= 3.12.8 (some change in argparse results in this error) Until this is fixed
# (and until dependencies such as torchrl are available for python 3.15) we need to limit the python version to < 3.15
requires-python = ">=3.10,<3.15"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# development dependency groups
dev = [
    'pytest',
    'pytest-cov',
    'pre-commit',
    'mockito'
]

[project.urls]
Source = 'https://git.rwth-aachen.de/i6/general/plangolin'

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["F403", "F405", "F541"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = ["test/"]
norecursedirs = ["experiments", ".git", "venv", "build"," dist"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "test/*",
    "tests/*"
]

[tool.coverage.report]
omit = [
    "test/*",
    "tests/*"
]
